--- a/Blockchain/ICO/package.json
+++ b/Blockchain/ICO/package.json
@@ -13,6 +13,7 @@
   "author": "gokul",
   "license": "ISC",
   "devDependencies": {
+    "@truffle/contract": "^4.6.2",
     "bootstrap": "^4.6.2",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
@@ -20,7 +21,9 @@
     "lite-server": "^2.3.0",
     "nodemon": "^2.0.20",
     "truffle": "^5.5.30",
-    "truffle-contract": "^4.0.2",
-    "@truffle/contract": "^4.6.2"
+    "truffle-contract": "^4.0.2"
+  },
+  "dependencies": {
+    "web3": "^1.8.0"
   }
 }
